--- a/src/Layers/xrRenderPC_R3/xrRender_R3.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R3/xrRender_R3.vcxproj.filters
@@ -204,9 +204,6 @@
     <ClInclude Include="r3_R_sun_support.h">
       <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="..\xrRender\r__dsgraph_structure.h">
-      <Filter>Core</Filter>
-    </ClInclude>
     <ClInclude Include="..\xrRender\r__dsgraph_types.h">
       <Filter>Core</Filter>
     </ClInclude>
@@ -703,6 +700,9 @@
       <Filter>Lights</Filter>
     </ClInclude>
     <ClInclude Include="..\xrRender\RenderAllocator.hpp">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\xrRender\D3DXRenderBase.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
